--- a/admin/members.yml
+++ b/admin/members.yml
@@ -3,9 +3,9 @@
 #
 
 members:
-  - name:
-    uid:
-  - name:
-    uid:
+  - name:Zihan Ai
+    uid:u7528678
+  - name:Zetian Chen
+    uid:u7564812
   - name:
     uid:
