--- a/admin/C-best-u7528678.yml
+++ b/admin/C-best-u7528678.yml
@@ -10,9 +10,8 @@
 #
 
 declaration: >-
-  We declare that everything we have submitted for Stage C of this assignment
-  and all stages before it is entirely our own work, with the following
-  exceptions:
+  I submit the work below for assessment as my best work. I declare that this
+  is entirely my own work, with the following documented exceptions:
 
 # Use this to list names of people who you collaborated with, and a
 # comment about what you collaborated on.
@@ -30,20 +29,15 @@ declaration: >-
 # (or remove it altogether if you haven't used any external code)
 
 
-# Use this to list any assets (artwork, sound, etc) that you used.
-# Provide a comment explaining your use of that asset and the URL
-# and license for the asset
-#
-# Add as many "url+licence+comment" entries as necessary
-# (or remove it altogether if you haven't used any external assets)
+# I wish to submit the following classes as entirely my own (remove this if
+# you want to just submit methods):
 
 
+# I wish to submit the following methods as entirely my own (remove this if
+# you want to just submit classes):
+method:
+  - CatanDice.getRoad()
 
-# Sign *your* name and uids here. (Remove entries if you have fewer
-# than three members.)
-signatures:
-  - name: Zetian Chen
-    uid: u7564812
-  - name: Zihan Ai
-    uid: u7528678
-
+# sign *your* name and uid here
+name: Zihan Ai
+uid: u7528678
