--- a/admin/F-contribution.yml
+++ b/admin/F-contribution.yml
@@ -1,6 +1,6 @@
 # IMPORTANT: It is very important that you correctly complete this contribution
 # statement.
- 
+
 declaration: >-
   Stage F represents the culmination of the entire assignment.  We declare that
   the work toward our submission for all stages of this assignment was
@@ -10,19 +10,16 @@ declaration: >-
 # be 100 or 99 (33/33/33 is fine).  (Remove entries if you have fewer than three
 # members).
 contributions:
-  - uid: 
-    contribution: 
-  - uid:
-    contribution:
-  - uid:
-    contribution:
+  - uid: u7564812
+    contribution: 50
+  - uid: u7528678
+    contribution: 50
+
 
 # Sign *your* name and uids here. (Remove entries if you have fewer
 # than three members)
 signatures:
-  - name:
-    uid:
-  - name:
-    uid:
-  - name:
-    uid:
+  - name: Zetian Chen
+    uid: u7564812
+  - name: Zihan Ai
+    uid: u7528678
