--- a/admin/G-contribution.yml
+++ b/admin/G-contribution.yml
@@ -8,19 +8,16 @@ declaration: >-
 # be 100 or 99 (33/33/33 is fine).  (Remove entries if you have fewer than three
 # members).  
 contributions:
-  - uid: 
-    contribution: 
-  - uid:
-    contribution:
-  - uid:
-    contribution:
+  - uid: u7564812
+    contribution: 50
+  - uid: u7528678
+    contribution: 50
+
 
 # Sign *your* name and uids here. (Remove entries if you have fewer
 # than three members)
 signatures:
-  - name:
-    uid:
-  - name:
-    uid:
-  - name:
-    uid:
+  - name: Zetian Chen
+    uid: u7564812
+  - name: Zihan Ai
+    uid: u7528678
