--- a/admin/G-presentation.yml
+++ b/admin/G-presentation.yml
@@ -1,2 +1,2 @@
 # use this file to record the ANU Sharepoint URL for your video presentation
-url: "https://anu365-my.sharepoint.com/:v:/g/personal/u1234567_anu_edu_au/xxxx"
+url: "https://anu365-my.sharepoint.com/:v:/g/personal/u7564812_anu_edu_au/EaY6GdZQQ59MhyQIqA02qyUBksv6L0J3_mi0Bdr2aZbr9g?e=y19NJd"
